deployments/create_namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev-lo-wpk
  labels:
    app: lo-wpk
    env: dev
