deployments/create_ns_limit_range.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-ns-app
  labels:
    app: dev-app
    env: dev
spec:
  hard:
    limits.cpu: "10"
    limits.memory: "24Gi"
  resources:
    requests:
      cpu: "6"
      memory: "16Gi"
    limits:
      cpu: "10"
      memory: "24Gi"
