deployments/auth_gateway.yml
apiVersion: v1
kind: Pod
metadata:
  name: auth-gateway
  namespace: dev-ns
spec:
  nodeSelector:
    external-auth-services: "true"
  containers:
  - name: nginx
    image: nginx:1.19.1
    ports:
    - containerPort: 80
