deployments/init_container_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: init-container-pod
  namespace: dev-ns
spec:
  containers:
  - name: nginx
    image: nginx:1.19.1
