deployments/multi_container_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
  namespace: dev-ns
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
  - name: redis
    image: redis
    ports:
    - containerPort: 6379
  - name: couchbase
    image: couchbase
    ports:
    - containerPort: 8091
    - containerPort: 8092
    - containerPort: 8093
    - containerPort: 8094
    - containerPort: 11210
