deployments/pv_pod_example.yml
apiVersion: v1
kind: Pod
metadata:
   name: pv-pod
spec:
   containers:
   - name: busybox
     image: busybox
     command: ['sh', '-c', 'while true; do echo Success! > /output/success.txt; sleep 5; done']
   volumes:
   - name: pv-storage
     persistentVolumeClaim:
       claimName: host-pvc
   volumeMounts:
   - name: pv-storage
     mountPath: /output
