deployments/serviceaccount_example.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  serviceAccountName: my-service-account
  containers:
  - name: my-app
    image: public.ecr.aws/nginx/nginx:X.XX
