deployments/init_svc_example.yml
apiVersion: v1
kind: Service
metadata:
  name: init-svc
spec:
  selector:
    app: init-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: init-backend
  labels:
   app: init-svc
spec:
  containers:
  - name: nginx
    image: nginx:1.19.1
